--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,6 @@
 {
   "name": "Python 3",
-  "RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y"
-  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+  "docker":"RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y",
   "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
   "customizations": {
     "codespaces": {
