--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,5 @@ python-docx
 opencv-python 
 opencv-contrib-python 
 opencv-python
-RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
+apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
 
